[fix] add custom index.html

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -14,6 +14,7 @@ RUN set -x \
     	-keyout rootca.key -out rootca.crt
 
 COPY ./nginx.conf /etc/nginx
+COPY ./index.html /www/index.html
 
 EXPOSE 80
 
