--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -19,7 +19,7 @@ http {
 		ssl_certificate			/etc/ssl/private/rootca.crt;
 		ssl_certificate_key		/etc/ssl/private/rootca.key;
 		ssl_protocols TLSv1.2 TLSv1.3;
-        root                    /www;
+        root                    /var/www/html;
         index                   index.html index.htm;
         server_name             localhost;
         client_max_body_size    32m;
@@ -28,4 +28,5 @@ http {
               root              /var/lib/nginx/html;
         }
     }
+	include /etc/nginx/conf.d/*.conf;
 }
