Fix: do install within shared volume directory. add more dependent package to avoid installation error

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,13 +1,15 @@
 FROM alpine:3.16
 
 RUN apk update --no-cache \
-    && apk add php8 php8-fpm php8-mysqli php8-phar curl \
+    && apk add php8 php8-fpm php8-mysqli php8-phar php8-iconv mysql-client curl \
     && curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
     && chmod +x wp-cli.phar \
     && mv wp-cli.phar /usr/local/bin \
     && ln -sf /usr/local/bin/wp-cli.phar /usr/local/bin/wp-cli
 
 ADD run.sh /scripts/run.sh
+
+WORKDIR /var/www/html/wordpress
 
 RUN chmod +x /scripts/run.sh
 
