Fix: use different email address to avoid duplicate email error when setting wordpress

--- a/srcs/.env
+++ b/srcs/.env
@@ -3,7 +3,7 @@ DOMAIN_NAME=sohan.42.fr
 MYSQL_DATABASE=wordpress
 MYSQL_ROOT=root
 MYSQL_ROOT_PASSWORD=password
-MYSQL_USER=mysql
+MYSQL_USER=sohan
 MYSQL_USER_PASSWORD=password
 MYSQL_HOST=mariadb
 
@@ -12,4 +12,4 @@ WP_ADMIN_PASSWORD=password
 WP_ADMIN_EMAIL=sohan@student.42seoul.kr
 WP_USER=sohan
 WP_USER_PASSWORD=password
-WP_EMAIL=sohan@student.42seoul.kr
+WP_EMAIL=42.4.sohan@gmail.com
