--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,5 +1,10 @@
 FROM alpine:3.16
 
+LABEL maintainer="Sojeong Han <42.4.sohan@gmail.com>" \
+    php-version="8.0.27" \
+    wordpress-version="latest" \
+    alpine-version="3.16.0"
+
 RUN apk update --no-cache \
     && apk add php8 php8-fpm php8-mysqli php8-phar php8-iconv mysql-client curl \
     && curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
@@ -15,4 +20,6 @@ RUN chmod +x /scripts/run.sh
 
 EXPOSE 9000
 
-CMD ["/scripts/run.sh"]
+VOLUME ["/var/www/html/wordpress"]
+
+ENTRYPOINT ["/scripts/run.sh"]
