--- a/srcs/requirements/nginx/my.conf
+++ b/srcs/requirements/nginx/my.conf
@@ -1,14 +1,6 @@
-upstream php {
-        server unix:/tmp/php-cgi.socket;
-        server 127.0.0.1:9000;
-}
-
 server {
-        ## Your website name goes here.
         server_name sohan.42.fr;
-        ## Your only path reference.
-	#listen 443 default_server ssl;
-	#listen [::]:443 default_server ssl;    
+
         listen 443 ssl;
         listen [::]:443 ssl;
 
@@ -17,24 +9,12 @@ server {
 	ssl_protocols	TLSv1.2 TLSv1.3;
 
         root /var/www/html/wordpress;
-        ## This should be in your http block and if it is, it's not needed here.
+
         index index.php index.html index.htm;
 
-        location = /favicon.ico {
-                log_not_found off;
-                access_log off;
-        }
-
-        location = /robots.txt {
-                allow all;
-                log_not_found off;
-                access_log off;
-        }
-
-        location / {
-                # This is cool because no php is touched for static content.
-                # include the "?$args" part so non-default permalinks doesn't break when using query string
-                try_files $uri $uri/ /index.php?$args;
+        error_page 403 502 /error.html;
+        location = /error.html {
+                root /usr/share/nginx/html;
         }
 
         location ~ \.php$ {
@@ -45,12 +25,5 @@ server {
                 #The following parameter can be also included in fastcgi_params file
                 fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
-
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-                expires max;
-                log_not_found off;
-        }
-
-        #return 301 $scheme://$host$request_uri;
 
 }
