entrypoint to cmd

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -25,4 +25,4 @@ STOPSIGNAL SIGQUIT
 
 VOLUME ["/var/www/html/wordpress"]
 
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
+CMD ["nginx", "-g", "daemon off;"]
