Fix: locate www.conf manually that wordpress container succesfully restart whenever unexpectedly restarts

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -14,6 +14,8 @@ RUN apk update --no-cache \
 
 ADD run.sh /scripts/run.sh
 
+ADD www.conf /etc/php8/php-fpm.d/www.conf
+
 WORKDIR /var/www/html/wordpress
 
 RUN chmod +x /scripts/run.sh
